added github and linkedin account

--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Mohammad Zeeshan</span></h1>
 			            <h2 class="mb-4">A Software Engineer</h2>
+						<div style="margin-bottom: 20px;">
+							<a href="https://github.com/Zeeshan176" target="_blank" class="btn btn-dark py-2 px-3" style="margin-right: 10px;">
+								<i class="flaticon-github"></i> GitHub
+							</a>
+							<a href="https://www.linkedin.com/in/md-zeeshan-665907171/" target="_blank" class="btn btn-primary py-2 px-3" style="background-color: #0077B5; border-color: #0077B5;">
+								<i class="flaticon-linkedin"></i> LinkedIn
+							</a>
+						</div>
 						<p><a href="files/Mohammad_Zeeshan_Resume.pdf" class="btn btn-primary py-3 px-3" download="Mohammad_Zeeshan_Resume.pdf">Download CV</a></p>
 			            <!-- <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p> -->
 		            </div>
@@ -79,6 +87,14 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm a <span>Software Engineer</span> based in India</h1>
+						<div style="margin-bottom: 20px;">
+							<a href="https://github.com/Zeeshan176" target="_blank" class="btn btn-dark py-2 px-3" style="margin-right: 10px;">
+								<i class="flaticon-github"></i> GitHub
+							</a>
+							<a href="https://www.linkedin.com/in/md-zeeshan-665907171/" target="_blank" class="btn btn-primary py-2 px-3" style="background-color: #0077B5; border-color: #0077B5;">
+								<i class="flaticon-linkedin"></i> LinkedIn
+							</a>
+						</div>
 						<p><a href="files/Mohammad_Zeeshan_Resume.pdf" class="btn btn-primary py-3 px-3" download="Mohammad_Zeeshan_Resume.pdf">Download CV</a></p>
 						<!-- <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p> -->
 		            </div>
