--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+					<p><a href="files/Mohammad_Zeeshan_Resume.pdf" class="btn btn-primary py-3 px-3" download="Mohammad_Zeeshan_Resume.pdf">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -237,7 +237,7 @@
 							</div>
 						</a>
 					</div>
-					<div class="col-md-4 text-center d-flex ftco-animate">
+					<!-- <div class="col-md-4 text-center d-flex ftco-animate">
 						<a href="#" class="services-1">
 							<span class="icon">
 								<i class="flaticon-ideas"></i>
@@ -246,7 +246,7 @@
 								<h3 class="mb-5">Web Developer</h3>
 							</div>
 						</a>
-					</div>
+					</div> -->
 
 					<!-- <div class="col-md-4 text-center d-flex ftco-animate">
 						<a href="#" class="services-1">
@@ -641,11 +641,13 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>Results-driven Software Engineer with 3 years of experience in backend development and full-stack solutions. Skilled in designing and
+				implementing scalable, high-performance systems using Node.js, Golang, and modern software development practices. Proven expertise in optimizing
+				backend processes, integrating cutting-edge technologies, and delivering efficient, user-centric solutions for enterprise clients.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <!-- <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li> -->
+                <li class="ftco-animate"><a href="https://instagram.com/being_mz"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -656,7 +658,7 @@
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
+                <!-- <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li> -->
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
               </ul>
             </div>
@@ -665,11 +667,11 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Services</h2>
               <ul class="list-unstyled">
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Design</a></li>
+                <!-- <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Design</a></li> -->
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Web Development</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Business Strategy</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Analysis</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Graphic Design</a></li>
+                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Backend Support</a></li>
+                <!-- <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Data Analysis</a></li> -->
+                <!-- <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Graphic Design</a></li> -->
               </ul>
             </div>
           </div>
@@ -678,9 +680,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">A-Block Jamshedpur Dhatkidih, Jharkhand India 831001</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 797 9977 114</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">zeeshanmd956@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
